# radon-os

./: .gitignore  Makefile
bootstrap/: Cargo.toml
bootstrap/src/: client.rs  handler.rs  lib.rs  protocol.rs
drivers/: Makefile
drivers/acpi/: Cargo.toml  Makefile
drivers/acpi/src/: acpi_table.rs  main.rs  protocol.rs
drivers/ahci/: Cargo.toml  Makefile
drivers/ahci/src/: main.rs
drivers/block_protocol/: Cargo.toml
drivers/block_protocol/src/: protocol.rs
drivers/namespace/: Cargo.toml  Makefile
drivers/namespace/src/: client.rs  lib.rs  main.rs  protocol.rs  server.rs
drivers/nvme/: Cargo.toml  Makefile
drivers/nvme/src/: main.rs
drivers/nvme/src/nvme/: mod.rs  regs.rs
drivers/pci/: Cargo.toml  Makefile
drivers/pci/src/: main.rs  protocol.rs
drivers/rootns/: Cargo.toml  Makefile
drivers/rootns/crates/efs/: ARCHITECTURE.md  Cargo.toml  README.md  deny.toml  flake.nix  rust-toolchain.toml  rustfmt.toml
drivers/rootns/crates/efs/.cargo/: config.toml
drivers/rootns/crates/efs/.forgejo/workflows/: build.yml  deny.yml  publish.yaml
drivers/rootns/crates/efs/src/: arch.rs  celled.rs  error.rs  lib.rs  path.rs  tests.rs
drivers/rootns/crates/efs/src/dev/: address.rs  mod.rs
drivers/rootns/crates/efs/src/fs/: error.rs  file.rs  mod.rs  permissions.rs  types.rs
drivers/rootns/crates/efs/src/fs/ext2/: block.rs  block_group.rs  directory.rs  error.rs  file.rs  inode.rs  mod.rs  superblock.rs
drivers/rootns/crates/efs/src/fs/sfs/: block.rs  error.rs  file.rs  index_area.rs  mod.rs  name_string.rs  super_block.rs  time_stamp.rs
drivers/rootns/crates/efs/src/fs/structures/: bitmap.rs  block.rs  indirection.rs  mod.rs
drivers/rootns/crates/efs/tests/fs/ext2/: base.ext2  io_operations.ext2
drivers/rootns/src/: main.rs
init/: .gitignore  Cargo.toml  Makefile
init/src/: main.rs  program.rs
kernel/: .gitignore  Cargo.toml  Makefile  build.rs  limine.conf  mkinitcpio.sh
kernel/crates/acpi/src/: lib.rs
kernel/crates/rmm/src/: lib.rs  main.rs
kernel/crates/rmm/src/arch/: aarch64.rs
kernel/crates/x2apic-rs/src/lapic/: lapic_id.rs  mod.rs
kernel/linkers/: x86_64.ld
kernel/src/: consts.rs  heap.rs  layout.rs  lib.rs  main.rs  nr.rs  panic.rs
kernel/src/arch/: cache.rs  irq.rs  mod.rs  syscall.rs  time.rs
kernel/src/arch/x86_64/: cache.rs  gdt.rs  irq.rs  mod.rs  rmm.rs  smp.rs  syscall.rs  time.rs
kernel/src/arch/x86_64/boot/: start.S
kernel/src/arch/x86_64/drivers/: apic.rs  hpet.rs  mod.rs
kernel/src/drivers/: fbterm.rs  framebuffer.rs  logger.rs  mod.rs  ns16550.rs
kernel/src/drivers/acpi/: mod.rs
kernel/src/init/: memory.rs
kernel/src/loader/: elf.rs  mod.rs  program.rs
kernel/src/memory/: heap.rs  mod.rs
kernel/src/object/: channel.rs  handle.rs  mod.rs  port.rs  process.rs  signal.rs  vmar.rs  vmo.rs  wait_queue.rs
kernel/src/smp/: mod.rs
kernel/src/syscall/: clock.rs  error.rs  futex.rs  kernel.rs  log.rs  memory.rs  mod.rs  nr.rs  object.rs  process.rs
kernel/src/task/: mod.rs  sched.rs  state.rs
libdriver/: Cargo.toml
libdriver/src/: buffer.rs  client.rs  dma.rs  irq.rs  lib.rs  mmio.rs  protocol.rs  ring.rs  server.rs
libposix/: Cargo.toml
libposix/src/: lib.rs  protocol.rs
libradon/: Cargo.toml
libradon/src/: channel.rs  handle.rs  lib.rs  logger.rs  memory.rs  port.rs  process.rs  signal.rs  syscall.rs
libradon/src/arch/x86_64/: mod.rs
libradon/src/async_rt/: executor.rs  futures.rs  mod.rs  waker.rs
nameserver/: Cargo.toml  Makefile
nameserver/src/: client.rs  lib.rs  protocol.rs
nameserver/src/server/: handler.rs  mod.rs  registry.rs  watcher.rs
posix/: Cargo.toml  Makefile
posix/src/: fs.rs  main.rs
posix/src/process/: elf.rs  file.rs  mod.rs  program.rs  vma.rs
