[package]
name = "radon_kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
acpi = { path = "crates/acpi", default-features = false, features = ["alloc"] }
bit_field = "0.10.3"
bitflags = "2.10.0"
cpio_reader = "0.1.2"
good_memory_allocator = "0.1.7"
limine = "0.5.0"
log = "0.4.29"
os-terminal = "0.6.15"
rmm = { path = "crates/rmm", default-features = false }
rustc-demangle = "0.1.27"
spin = "0.10.0"

[target.'cfg(target_arch = "x86_64")'.dependencies]
uart_16550 = "0.4.0"
x2apic = { path = "crates/x2apic-rs" }
x86_64 = "0.15.4"

[dependencies.object]
version = "0.38.1"
features = ["read_core", "elf", "unaligned"]
default-features = false

[dependencies.unwinding]
version = "0.2.8"
default-features = false
features = ["unwinder", "fde-static", "personality", "panic"]
