[package]
name = "efs"
version = "0.5.0"
authors = ["RatCornu <ratcornu@skaven.org>"]
edition = "2024"
description = "An OS and architecture independent implementation of some Unix filesystems in Rust."
documentation = "https://docs.rs/efs/"
readme = "README.md"
homepage = "https://codeberg.org/RatCornu/efs"
repository = "https://codeberg.org/RatCornu/efs"
license = "GPL-3.0"
keywords = ["filesystem", "no-std"]
categories = ["filesystem", "no-std"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
bitflags = "2"
derive_more = { version = "2", default-features = false, features = ["full"] }
deku = { version = "0.20", default-features = false, features = ["alloc"] }
itertools = { version = "0.14", default-features = false, features = ["use_alloc"] }
regex = { version = "1", default-features = false }
spin = "0.10"

[dev-dependencies]
itertools = { version = "0.14", default-features = true }

[features]
default = []
ext2 = []
sfs = []
std = ["deku/std"]

[lints.clippy]
complexity = "deny"
correctness = "deny"
nursery = "deny"
pedantic = "deny"
perf = "deny"
style = "deny"

[lints.rust]
missing_docs = "deny"
